[tool.poetry]
name = "mboot"
version = "0.3.1"
description = ""
authors = ["Martin Olejar, <martin.olejar@gmail.com>", "Conor Patrick, <conor@solokeys.com>"]
classifiers=[
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'License :: OSI Approved :: BSD License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Embedded Systems',
    'Topic :: Utilities',
]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python='>=3.6'
click="=7.0"
pyserial="=3.4"
easy_enum="=0.3.0"
bincopy="*"
fido2="=0.8.1"

[tool.poetry.scripts]
mboot = "mboot.__main__:main"
